--- a/composer.json
+++ b/composer.json
@@ -79,6 +79,10 @@
         "allow-plugins": {
             "pestphp/pest-plugin": true,
             "php-http/discovery": true
+        },
+        
+        "platform": {
+            "php": "8.3.10"
         }
     },
     "minimum-stability": "stable",
