--- a/composer.json
+++ b/composer.json
@@ -8,9 +8,11 @@
     "require": {
         "php": "^8.2",
         "barryvdh/laravel-dompdf": "^3.1",
+        "doctrine/dbal": "^4.4",
         "intervention/image": "^3.11",
         "laravel/framework": "^11.31",
         "laravel/horizon": "^5.41",
+        "laravel/reverb": "^1.7",
         "laravel/sanctum": "^4.2",
         "laravel/tinker": "^2.9",
         "league/fractal": "^0.21.0",
