--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
         "@tailwindcss/typography": "^0.5.10",
         "alpinejs": "^3.13.3",
         "autoprefixer": "^10.4.16",
+        "laravel-echo": "^2.3.0",
         "laravel-vite-plugin": "^1.0.0",
         "postcss": "^8.4.32",
+        "pusher-js": "^8.4.0",
         "tailwindcss": "^3.4.0",
         "vite": "^5.0.0"
     },
